--- a/poem.css
+++ b/poem.css
@@ -1,1 +1,17 @@
-
+body {
+  width: 450px;
+  padding: 15px 35px 15px 35px;
+  margin: 20px auto 20px auto;
+  border: 20px solid aliceblue;
+  font-family: serif;
+}
+.bold {
+  text-type: bold;
+  color: red;
+}
+h1 {
+  text-align: center;
+}
+p {
+  text-align: center;
+}
