--- a/poem.css
+++ b/poem.css
@@ -9,10 +9,11 @@ body {
   text-type: bold;
   color: red;
 }
-h1 {
+h1, h2 {
   text-align: center;
-  font-family: Old English Text MT;
+  font-family: Forte;
 }
 p {
   text-align: center;
+  font-family: harrington;
 }
