--- a/poem.css
+++ b/poem.css
@@ -12,11 +12,16 @@ body {
 h1, h2 {
   text-align: center;
   font-family: Forte;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
-p {
+.poem {
   text-align: center;
   font-family: harrington;
 }
 img {
   width: 100%;
+}
+p {
+  font-family: serif;
 }
