--- a/poem.css
+++ b/poem.css
@@ -2,7 +2,7 @@ body {
   width: 450px;
   padding: 15px 35px 15px 35px;
   margin: 20px auto 20px auto;
-  border: 20px solid aliceblue;
+  border: 20px solid red;
   font-family: serif;
 }
 .bold {
@@ -22,6 +22,10 @@ h1, h2 {
 img {
   width: 100%;
 }
-p {
+.notes {
   font-family: serif;
+  border: 3px solid navy;
+}
+h1 {
+  border: 2px dashed red;
 }
