--- a/poem.css
+++ b/poem.css
@@ -8,8 +8,9 @@ body {
 .bold {
   text-type: bold;
   color: blue;
+  text-style: italic;
 }
-h1, h2 {
+h1, h2, h3 {
   text-align: center;
   font-family: Forte;
   margin-top: 5px;
