--- a/quiz.css
+++ b/quiz.css
@@ -1,1 +1,12 @@
-
+.correct {
+  color: green;
+  font-family: cursive;
+}
+h1 {
+	text-align: center;
+	font-family: cursive;
+	color: blue;
+}
+p {
+	margin: 20px auto 20px auto;
+}
