--- a/quiz.css
+++ b/quiz.css
@@ -11,3 +11,14 @@ h1 {
 p {
 	text-align: center;
 }
+h2 {
+	font-family: cursive;
+}
+.score {
+	font-family: cursive;
+	color: blue;
+}
+.score4 {
+	text-align: center;
+	font-family: cursive;
+}
