--- a/javier2.css
+++ b/javier2.css
@@ -1,1 +1,12 @@
-
+h1 {
+	text-align: center;
+	font-family: elephant;
+	color: blue;
+}
+body {
+	border: 20px solid red:
+}
+h2 {
+	font-family: elephant;
+	color: blue;
+}
