--- a/javier2.css
+++ b/javier2.css
@@ -1,12 +1,12 @@
 h1 {
 	text-align: center;
-	font-family: elephant;
-	color: blue;
+	font-family: elephant
 }
 body {
-	border: 20px solid red:
+	border: 20px solid red;
+	margin-left: auto;
+	margin-right: auto;
 }
 h2 {
-	font-family: elephant;
-	color: blue;
+	font-family: elephant
 }
