--- a/javier2.css
+++ b/javier2.css
@@ -3,7 +3,7 @@ h1 {
 	font-family: elephant
 }
 body {
-	border: 20px solid red;
+	border: 20px solid green;
 	margin-left: auto;
 	margin-right: auto;
 }
