--- a/javier.css
+++ b/javier.css
@@ -1,9 +1,17 @@
 h1, h3 {
 	text-align: center;
 	font-family: cursive;
-	color: blue;
 }
-p, ul, li {
+p {
 	margin: 20px auto 20px auto;
 	text-align: center;
+}
+ul, li {
+	margin: 20px auto 20px auto;
+	text-align: center;
+	border: solid 2px black;
+	padding: 5px
+}
+.body {
+	background-color: yellow;
 }
