--- a/javier.css
+++ b/javier.css
@@ -10,7 +10,9 @@ li {
 	margin: 20px auto 20px auto;
 	text-align: center;
 	border: solid 2px black;
-	padding: 5px
+	padding: 5px;
+	background-color: white;
+	width: 450px;
 }
 .body {
 	background-color: yellow;
