--- a/javier.css
+++ b/javier.css
@@ -1,10 +1,8 @@
 h1, h3 {
-	text-align: center;
 	font-family: cursive;
 }
 p {
-	margin: 20px auto 20px auto;
-	text-align: center;
+	margin: 20px auto 20px auto;#
 }
 li {
 	margin: 20px auto 20px auto;
@@ -17,7 +15,4 @@ li {
 .body {
 	background-color: yellow;
 	border: solid 3px black;
-}
-body {
-	width: 450px;
 }
