--- a/javier.css
+++ b/javier.css
@@ -7,7 +7,8 @@ p {
 li {
 	margin: 20px auto 20px auto;
 	text-align: center;
-	border: solid 2px black;
+	border-top: solid 2px black;
+	border-bottom: solid 2px black;
 	padding: 5px;
 	background-color: white;
 	width: 300px;
