--- a/javier.css
+++ b/javier.css
@@ -6,9 +6,12 @@ h1, h3 {
 	border-bottom: solid 2px black;
 	padding: 5px;
 	background-color: white;
-	width: 300px;
+	width: 450px;
 }
 .body {
 	background-color: yellow;
 	border: solid 3px black;
+}
+body {
+	width: 450px;
 }
