--- a/javier.css
+++ b/javier.css
@@ -5,9 +5,10 @@ h1, h3 {
 .list {
 	border-top: solid 2px black;
 	border-bottom: solid 2px black;
-	padding: 5px;
+	padding: 5px 0px 5px 0px;
 	background-color: white;
 	width: 450px;
+	text-align: center;
 }
 .body {
 	background-color: yellow;
