--- a/javier.css
+++ b/javier.css
@@ -5,7 +5,8 @@ h1, h3 {
 .list {
 	border-top: solid 2px black;
 	border-bottom: solid 2px black;
-	padding: 5px 0px 5px 0px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	background-color: white;
 	width: 450px;
 	text-align: center;
