--- a/quiz.css
+++ b/quiz.css
@@ -11,7 +11,6 @@
 h1 {
 	text-align: center;
 	font-family: cursive;
-	color: blue;
 }
 p {
 	text-align: center;
@@ -27,9 +26,19 @@ h2 {
 	text-align: center;
 	font-family: cursive;
 }
-.blank {
+.body {
 	font-family: cursive;
-	color: white;
+	background-color: yellow;
+	width: 450px;
+	border: solid 4px black;
+	padding: 10px;
+}
+.reveal {
+	font-family: cursive;
 	background-color: white;
+	border-top: solid 2px black;
+	border-bottom: solid 2px black;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 	
