--- a/quiz.css
+++ b/quiz.css
@@ -32,12 +32,13 @@ h2 {
 	width: 450px;
 	border: solid 4px black;
 	padding: 10px;
+	text-align: center;
+	margin: 20px auto 20px auto;
 }
 .reveal {
 	font-family: cursive;
 	background-color: white;
-	border-top: solid 2px black;
-	border-bottom: solid 2px black;
+	border: solid 2px black;
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
