--- a/eiffel-tower.css
+++ b/eiffel-tower.css
@@ -1,19 +1,35 @@
 body {
 	margin: 0px;
-	padding: 0px;
-	background-color: white;
+	padding: 15px;
+	background-color: blue;
 	font-family: Arial, Helvetica, "sans-serif";
 	font-size: 18px;
 	text-align: center;
+	border: 5px solid black:
 }
 h1 {
 	font-size: 36px;
-	margin: 0px
-	padding: 5px
+	margin: 0px;
+	padding: 5px;
+	border: 3px solid black;
+	background-color: white;
 }
 h2 {
 	font-size: 30px;
 }
 ul, ol {
 	text-align: center;
+	border: 2px solid black;
+	background-color: white;
+	padding: 5px;
+}
+.left-column {
+	float: left;
+	text-align: center;
+	width: 400px;
+}
+.right-column {
+	float: right;
+	text-align: center;
+	width: 400px;
 }
