--- a/eiffel-tower.css
+++ b/eiffel-tower.css
@@ -16,6 +16,7 @@ h1 {
 }
 h2 {
 	font-size: 30px;
+	color: white;
 }
 ul, ol {
 	text-align: center;
@@ -32,4 +33,7 @@ ul, ol {
 	float: right;
 	text-align: center;
 	width: 400px;
+}
+h3, p {
+	color: white;
 }
