--- a/eiffel-tower.css
+++ b/eiffel-tower.css
@@ -5,7 +5,8 @@ body {
 	font-family: Arial, Helvetica, "sans-serif";
 	font-size: 18px;
 	text-align: center;
-	border: 5px solid black:
+	border: 5px solid black;
+	width: 700px;
 }
 h1 {
 	font-size: 36px;
