--- a/eiffel-tower.css
+++ b/eiffel-tower.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0px;
 	padding: 15px;
-	background-color: blue;
+	background-color: white;
 	font-family: Arial, Helvetica, "sans-serif";
 	font-size: 18px;
 	text-align: center;
@@ -17,7 +17,6 @@ h1 {
 }
 h2 {
 	font-size: 30px;
-	color: white;
 }
 ul, ol {
 	text-align: center;
@@ -34,7 +33,4 @@ ul, ol {
 	float: right;
 	text-align: center;
 	width: 400px;
-}
-h3, p {
-	color: white;
 }
